--- a/wash.css
+++ b/wash.css
@@ -12,6 +12,7 @@ background-image: url(images/osislogo.png);
 background-position: left top;
 background-repeat: no-repeat;
 font-family: "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif;
+height:60px;
 }
 
 #header h1 {
@@ -30,7 +31,7 @@ margin: 0px 0px 0px 0px;
 
 #navlist{
 border-bottom: 1px solid #ccc;
-margin: 0;
+margin: -15px 0 0 0;
 padding-bottom: 19px;
 padding-left: 70px;
 }
