--- a/sandy.css
+++ b/sandy.css
@@ -503,6 +503,12 @@ color:#000;
 color:#f00;
 }
 
+.lexiconentry{
+margin: 0.5em 0em 0.5em 0em;
+background-color: #DEDACA;
+border-left: 1px dotted #808072;
+}
+
 /* Parallel Display */
 
 #paralleldisplay {
