--- a/wash.css
+++ b/wash.css
@@ -87,6 +87,7 @@ font-weight: bold;
 font-size: 1.0em;
 }
 
+a:link {color:#000099;}
 
 /* Layout */
 
@@ -249,7 +250,7 @@ border-bottom: 1px solid #C5D6EA;
 
 #library li a {
 display:block;
-padding: 0px 0px 0px px;
+padding: 0px 0px 0px 0px;
 text-decoration: none;
 color:#000}
 
