--- a/sandy.css
+++ b/sandy.css
@@ -139,11 +139,12 @@ font-family: "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif;
 #footer{
 clear:both;
 margin: 0px 0px 0px 0px;
-
+padding: 10px 0px 0px 0px;
 text-align: center;
-background-color: #808072;
+background: #DEDACA;
 background-image: url(images/sandyfade3.png);
 background-repeat: repeat-x;
+
 }
 
 #footer a{color:black}
@@ -226,18 +227,18 @@ margin: 0px 0px 0px 10px;
 
 #library li{
 margin: 3px 0px 0px 10px;
-background-image: url(images/arrow.png);
+background-image: url(images/sandy_arrow.png);
 background-repeat: no-repeat;
 border-bottom: 1px solid #F5F3EA;
 }
 
 #library li.closed {
-background-image: url(images/plus.png);
+background-image: url(images/sandy_plus.png);
 background-repeat: no-repeat;
 }
 
 #library li.open {
-background-image: url(images/minus.png);
+background-image: url(images/sandy_minus.png);
 background-repeat: no-repeat;
 }
 
