--- a/parchment.css
+++ b/parchment.css
@@ -31,49 +31,49 @@ margin: 0px 0px 0px 0px;
 
 /* Main Navigation */
 
-#navlist{
+#navlist {
 padding: 0px 0px 0px 0px;
 margin: 0px 15px 0px 15px;
 text-align: center;
 }
 
-#navlist ul{
-border-bottom: 3px solid #222;
-border-top: 3px solid #222;
-list-style-type: none;
-margin: 0;
-padding: 3px 0px 2px 0px;
-width:100%;
-text-align: center;
+#navlist ul {
+  border-bottom: 2px solid #7F673C;
+  border-top: 2px solid #7F673C;
+  margin: 0px 12px 0px 12px;
+  padding: 8px 15px 6px 15px;
+  text-align: center;
 }
 
-#navlist li{
-display: inline;
-margin: 0px 0px 0px 0px;
-padding: 0px 0px 0px 0px;
+#navlist li {
+  display: inline;
+  margin: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
 }
 
 #navlist a:link, #navlist a:visited {
-color: #A13033;
+color: #000;
 font-family: Georgia, Times New Roman, Times, Serif;
 text-transform: uppercase;
-font-size: 1.0em;
+font-size: 1.2em;
 font-weight: normal;
 line-height: 1.0em;
-padding: 0px 5px 0px 5px;
+padding: 2px 15px 0px 12px;
 text-decoration: none;
 font-weight: bold;
 }
 
 #navlist a:link#current, #navlist a:visited#current {
-color: #000;
+color: #A13033;
 
-border-bottom: 3px solid #222;
+  background-image: url("images/parchment/blt_001.gif");
+  background-repeat: no-repeat;
+  background-position: left;
+  padding: 2px 12px 0px 15px;
 }
 
 #navlist a:hover { 
-color: #222;
-border-bottom: 3px solid #222;
+color: #A13033;
 background : #FFFFCC
 }
 
@@ -81,19 +81,21 @@ background : #FFFFCC
 
 /* General - Site wide style */
 
-h2{
-margin: 12px 0px 3px 0px;
-padding: 5px 0em 3px .5em;
-font-family: "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif;
-font-size: 1.4em;
+h2 {
+  margin: 12px 0px 3px 0px;
+  padding: 5px 0em 3px .5em;
+  font-family: "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 1.2em;
+  color: #A13033;
 }
 
 h3{
-margin: 12px 0px 3px 0px;
-padding: 5px 0em 3px .5em;
-font-family: "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif;
-font-weight: bold;
-font-size: 1.0em;
+  margin: 12px 0px 3px 0px;
+  padding: 5px 0em 3px .5em;
+  font-family: "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 1.0em;
 }
 
 
@@ -111,7 +113,7 @@ width:12em;
 float:left;
 margin: 0px 0em 0px 0px;
 padding: 0px 0.5em 20px 0px;
-border-right: 1px solid #222;
+border-right: 2px solid #7F673C;
 }
 
 #content-sub-2{
@@ -119,7 +121,7 @@ width:14em;
 float:right;
 margin: 0px 0px 0px 0px;
 padding: 0px 0 20px 1em;
-border-left: 1px solid #222;
+border-left: 2px solid #7F673C;
 }
 
 #content-main {
@@ -156,7 +158,7 @@ padding: 0px 0px 0px 0px;
 }
 
 #quicksearch form fieldset{
-border: 1px solid #222;
+border: 1px solid #7F673C;
 padding: 3px;
 }
 
@@ -223,12 +225,12 @@ border-bottom: 1px solid white;
 }
 
 #library li.closed {
-background-image: url(images/plus.png);
+background-image: url(images/sandy_plus.png);
 background-repeat: no-repeat;
 }
 
 #library li.open {
-background-image: url(images/minus.png);
+background-image: url(images/sandy_minus.png);
 background-repeat: no-repeat;
 }
 
@@ -326,8 +328,6 @@ background: #C3AB7F;
 text-indent: 0em;
 padding: 0px;
 margin: 0px 0px 0px 0px;
-	height: 170px;
-	overflow: auto;
 }
 
 #devotionals li{
@@ -502,9 +502,18 @@ padding: 0px .5em 0px .5em;
 
 #bluepanel p a:link { color: #000; }
 #bluepanel p a:visited { color: #000; }
+
+#welcome h2 {
+  background-image: url(images/parchment/blt_002.gif);
+  background-repeat: no-repeat;
+  background-position: left center;
+  padding: 0px 0px 0px 25px;
+}
 #welcome p a:link { color: #000; }
 #welcome p a:visited { color: #000; }
-
+#welcome p {
+margin: 5px 0px 0px 25px;
+}
 
 /*   Search Results   */
 
@@ -974,10 +983,21 @@ color: #bb0000;
 #header h1 {
   display: none;
 }
+
+#introflash {
+  height: 170px;
+  background-color: transparent;
+  background-image: url("./images/parchment/img_001.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  border-bottom: 2px solid #7F673C;
+  margin: 0px 12px 0px 12px;
+}
+
 #header {
   width: 100%;
   height: 135px;
-  margin: 9px 9px 9px 9px;
+  margin: 9px 9px 14px 9px;
   background-color: transparent;
   background-image: url("./images/parchment/top_logo.gif");
   background-position: bottom center;
