*** empty log message ***

--- a/parchment.css
+++ b/parchment.css
@@ -1016,5 +1016,5 @@ font-style: italic;
 #about h3 {
 margin: 1em 0px .5em 0px;
 padding: 0px 0px 0px 0px;
-border-bottom: 1px solid #DEDACA;
+border-bottom: 1px solid #7F673C;
 }
