used class for promoLine and copyLine, as there may be multiples on a page

--- a/sandy.css
+++ b/sandy.css
@@ -599,7 +599,7 @@ padding: 0px 0px 0px 0px;
 border-bottom: 1px solid #DEDACA;
 }
 
-#copyLine {
+.copyLine {
   margin: 1em 0px .5em 0px;
   padding: 0px 0px 0px 0px;
   border-top: 1px solid #7F673C;
@@ -607,7 +607,7 @@ border-bottom: 1px solid #DEDACA;
   font-style: italic;
 }
 
-#promoLine {
+.promoLine {
   margin: 1em 0px .5em 0px;
   padding: 10px 0px 0px 0px;
   font-weight: bold;
