--- a/wash.css
+++ b/wash.css
@@ -784,7 +784,7 @@ padding: 0px 0px 0px 0px;
 border-bottom: 1px solid #ccc; 
 }
 
-#copyLine {
+.copyLine {
   margin: 1em 0px .5em 0px;
   padding: 0px 0px 0px 0px;
   border-top: 1px solid #7F673C;
@@ -792,7 +792,7 @@ border-bottom: 1px solid #ccc;
   font-style: italic;
 }
 
-#promoLine {
+.promoLine {
   margin: 1em 0px .5em 0px;
   padding: 10px 0px 0px 0px;
   font-weight: bold;
