--- a/parchment.css
+++ b/parchment.css
@@ -1025,7 +1025,7 @@ padding: 0px 0px 0px 0px;
 border-bottom: 1px solid #7F673C;
 }
 
-#copyLine {
+.copyLine {
   margin: 1em 0px .5em 0px;
   padding: 0px 0px 0px 0px;
   border-top: 1px solid #7F673C;
@@ -1033,7 +1033,7 @@ border-bottom: 1px solid #7F673C;
   font-style: italic;
 }
 
-#promoLine {
+.promoLine {
   margin: 1em 0px .5em 0px;
   padding: 10px 0px 0px 0px;
   font-weight: bold;
