--- a/blues.css
+++ b/blues.css
@@ -417,3 +417,32 @@ form {
 }
 
 
+.word-layer {
+     position:absolute;
+     margin-left : 0;
+     left:50px;
+     top:50px;
+     width:200px;
+     visibility: hidden;
+     background-color: #fff3cf;
+     overflow: visible;
+     z-index:6;
+     filter: Alpha(Opacity=92)
+     layer-background-color: #fff3cf;
+     border: 1px #000000;
+     border-style: solid;
+     padding: 7px 7px 7px 7px;
+     color : #000000;
+     font-size : x-small;
+     font-style : normal;
+     font-weight : normal;
+     font-variant : normal;
+     word-spacing : normal;
+     letter-spacing : normal;
+     vertical-align : baseline;
+     text-transform : none;
+     text-align : left;
+     text-indent : 0;
+     line-height : normal;
+}
+
