--- a/blues.css
+++ b/blues.css
@@ -442,3 +442,16 @@ form {
      text-indent : 0;
      line-height : normal;
 }
+
+span.curWord {
+	text-decoration: underline;
+     font-weight : bold;
+	background-color: #f0f0f0;
+}
+span.sameLemmaMorph {
+	text-decoration: underline;
+     font-weight : bold;
+}
+span.sameLemma {
+     font-weight : bold;
+}
