--- a/parchment.css
+++ b/parchment.css
@@ -1071,3 +1071,15 @@ border-bottom: 1px solid #7F673C;
      line-height : normal;
 }
 
+span.curWord {
+	text-decoration: underline;
+     font-weight : bold;
+	background: #a1895F;
+}
+span.sameLemmaMorph {
+	text-decoration: underline;
+     font-weight : bold;
+}
+span.sameLemma {
+     font-weight : bold;
+}
