--- a/print.css
+++ b/print.css
@@ -112,3 +112,16 @@ img{display:none;
      text-indent : 0;
      line-height : normal;
 }
+
+span.curWord {
+	text-decoration: underline;
+     font-weight : bold;
+	background: #a1895F;
+}
+span.sameLemmaMorph {
+	text-decoration: underline;
+     font-weight : bold;
+}
+span.sameLemma {
+     font-weight : bold;
+}
