--- a/blues.css
+++ b/blues.css
@@ -387,6 +387,7 @@ ul.booknav {
 	border-bottom: 1px solid #dddddd;
 	border-top: 1px solid #dddddd;
 	background-color: #eeeeee;
+	text-align: center;
 }
 
 ul.booknav li{
