--- a/parchment.css
+++ b/parchment.css
@@ -128,7 +128,7 @@ border-left: 2px solid #7F673C;
 margin: 0px 0px 0px 0px;
 padding: 15px 15px 20px 15px;
 width:auto;
-font-family: "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif;
+font-family:cardo,tahoma,code2000,code2001,arial unicode ms,arial,sans serif,serif;
 }
 
 
