--- a/sandy.css
+++ b/sandy.css
@@ -134,7 +134,7 @@ border-left: 1px dashed #DEDACA;
 margin: 0px 0px 0px .5em;
 padding: 15px 15px 20px 15px;
 width:auto;
-font-family: "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif;
+font-family:cardo,tahoma,code2000,code2001,arial unicode ms,arial,sans serif,serif;
 }
 
 #footer{
