--- a/wash.css
+++ b/wash.css
@@ -119,7 +119,7 @@ border-left: 1px solid #ccc;
 margin: 0px 0px 0px 0px;
 padding: 15px 15px 20px 15px;
 width:auto;
-font-family: "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif;
+font-family:cardo,tahoma,code2000,code2001,arial unicode ms,arial,sans serif,serif;
 }
 
 
