Added a "please wait..." box while doing lookups Added hand icons when hovering over a word that can be clicked Added IE font support for scholarly fonts Fixed IE UTF-8 encode troubles for URLs

--- a/blues.css
+++ b/blues.css
@@ -240,13 +240,19 @@ a:active {
 	font-weight: bold;
 }
 
-#content-main .verse {
+.clk {
+	cursor:pointer;
+}
+
+.verse {
+	font-family:cardo,tahoma,code2000,code2001,arial unicode ms,arial,sans serif,serif;
 	margin: 0px 0px 5px 0px;
 	padding: 0px 5px 0px 5px;
 	vertical-align:text-top;
 }
 
-#content-main .currentverse {
+.currentverse {
+	font-family:cardo,tahoma,code2000,code2001,arial unicode ms,arial,sans serif,serif;
 	vertical-align:text-top;
 	margin: 0px 0px 5px 0px;
 	background-color: #eeeeee;
