--- a/webapp/wash.css
+++ b/webapp/wash.css
@@ -205,6 +205,15 @@ border-top: 1px solid #ccc;
 
 }
 
+#printer {
+width:14em;
+float:right;
+clear:right;
+margin: 0px 0px 0px 0px;
+padding: 0px 0 0px 1em;
+border-left: 1px solid #ccc;
+}
+
 #content-sub-1{
 width:12.5em;
 float:left;
@@ -217,6 +226,7 @@ clear:left;
 #content-sub-2{
 width:14em;
 float:right;
+clear:right;
 margin: 0px 0px 0px 0px;
 padding: 0px 0 20px 1em;
 border-left: 1px solid #ccc;
