--- a/webapp/rtol.css
+++ b/webapp/rtol.css
@@ -34,12 +34,10 @@ background-color:lightpink;
 clear:both;unicode-bidi: embed;   
         direction: rtl;}
 
-#main { float:right;
-	padding:2em;}
-#main_bak {position:relative;
+#content-main {position:relative;
 top:0;
 left:0;
-margin-right:200px;
+margin-right:240px;
 padding:1em;
 }
 
@@ -63,3 +61,14 @@ li {unicode-bidi: embed;
 	direction: rtl;}
 form {unicode-bidi:embed;
 	direction:rtl;}
+td {padding-left:0.5em;
+	padding-right:0.5em;
+	padding-bottom:0.5em;	}
+span.versenum {vertical-align: sup;
+		font-size: smaller;
+		padding-left:0.2em;
+		padding-right:0.2em}
+a:link {color: blue;text-decoration:none;}
+a:visited {color: darkblue;text-decoration:none;}
+a:hover {text-decoration: none; background-color: grey; } 
+
